force-app/main/default/objects/Activity/fields/AccountSchoolNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountSchoolNumber__c</fullName>
    <description>This field is automatically filled by a Process Flow. It shows the School Number of the parent Account (via WhatID)</description>
    <inlineHelpText>This field is automatically filled by a Process Flow. It shows the School Number of the parent Account (via WhatID)</inlineHelpText>
    <label>Account School Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>