force-app/main/default/objects/Activity/fields/AMMarketGroup__c.field-meta.xml
<CustomField>
    <fullName>AMMarketGroup__c</fullName>
    <formula>TEXT(Owner:User.MarketGroup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Market Group</label>
    <type>Text</type>
</CustomField>