force-app/main/default/objects/Activity/fields/AssignedToName__c.field-meta.xml
<CustomField>
    <fullName>AssignedToName__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
    <label>Assigned To Name</label>
    <type>Text</type>
</CustomField>