force-app/main/default/objects/Activity/fields/Associate__c.field-meta.xml
<CustomField>
    <fullName>Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>