force-app/main/default/objects/Activity/fields/DateSend__c.field-meta.xml
<CustomField>
    <fullName>DateSend__c</fullName>
    <label>Datum verstuurd</label>
    <type>DateTime</type>
</CustomField>