force-app/main/default/objects/Activity/fields/DoneDate__c.field-meta.xml
<CustomField>
    <fullName>DoneDate__c</fullName>
    <label>Done date</label>
    <type>Date</type>
</CustomField>