force-app/main/default/objects/Activity/fields/EmailIntern__c.field-meta.xml
<CustomField>
    <fullName>EmailIntern__c</fullName>
    <label>Email intern</label>
    <type>Email</type>
</CustomField>