force-app/main/default/objects/Activity/fields/EventCompleted__c.field-meta.xml
<CustomField>
    <fullName>EventCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Completed</label>
    <type>Checkbox</type>
</CustomField>