force-app/main/default/objects/Activity/fields/IsRelatedToOpportunity__c.field-meta.xml
<CustomField>
    <fullName>IsRelatedToOpportunity__c</fullName>
    <formula>IF(LEFT(WhatId  , 3) &lt;&gt; &apos;006&apos;, false, true)</formula>
    <label>IsRelatedToOpportunity</label>
    <type>Checkbox</type>
</CustomField>