force-app/main/default/objects/Activity/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Method</label>
    <referenceTo>Method__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>