force-app/main/default/objects/Activity/fields/NotApplicableForSurveyFollowUp__c.field-meta.xml
<CustomField>
    <fullName>NotApplicableForSurveyFollowUp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not applicable for Survey followup’</label>
    <type>Checkbox</type>
</CustomField>