force-app/main/default/objects/Activity/fields/OperatingCompany__c.field-meta.xml
<CustomField>
    <fullName>OperatingCompany__c</fullName>
    <formula>TEXT(Owner:User.OperatingCompany__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operating Company</label>
    <type>Text</type>
</CustomField>