force-app/main/default/objects/Activity/fields/TaskEnd__c.field-meta.xml
<CustomField>
    <fullName>TaskEnd__c</fullName>
    <description>This field has been created to be able to show the timeframe in which the task needs to be done. Example: Teacher says he is available between 1 and 2 pm. This way the call-requests can be planned in more effective.</description>
    <inlineHelpText>Please enter the timeframe for this task</inlineHelpText>
    <label>End</label>
    <type>DateTime</type>
</CustomField>